--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/ramda": "^0.28.14",
+    "bowser": "^2.11.0",
     "ramda": "^0.28.0",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
