--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 // 全局环境变量，应用信息配置 
-VITE_APP_NAME = "EasyFLow"
-VITE_APP_VERSION = "1.1.3"
-VITE_APP_VERSION_PRECISE = "1.1.0.220426_Alpha"
+VITE_APP_NAME = "EasyFLow"  // App名称
+VITE_APP_VERSION = "0.01" // 显式版本号
+VITE_APP_VERSION_PRECISE = "0.01-630" // 隐式版本号
+VITE_APP_POWERD = "JN.point.lab" // App构建者
+VITE_APP_COPY_RIGHT = "COPY RIGHT JN.ltd" // App版权信息
 
-VITE_APP_THEME = '#123E7A'
+
+
+VITE_APP_THEME = '#123E7A' // App主题色
