--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/ramda": "^0.28.14",
     "bowser": "^2.11.0",
+    "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
