--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash": "^4.14.182",
     "@types/ramda": "^0.28.14",
     "bowser": "^2.11.0",
+    "epic-spinners": "^1.1.0",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "vite-plugin-compression": "^0.5.1",
