--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smallwei/avue": "^3.0.17",
+    "@sscfaith/avue-form-design": "^3.0.0-beta.5",
     "@types/lodash": "^4.14.182",
     "@types/ramda": "^0.28.14",
     "bowser": "^2.11.0",
+    "bpmn-js": "^9.2.2",
+    "element-plus": "^2.2.8",
     "epic-spinners": "^1.1.0",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
