--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/lodash": "^4.14.182",
     "@types/ramda": "^0.28.14",
     "bowser": "^2.11.0",
-    "bpmn-js": "^9.2.2",
+    "bpmn-js-sketchy": "^0.5.3",
+    "bpmn-js-task-resize": "^1.2.0",
+    "bpmn-js-token-simulation": "^0.10.0",
     "element-plus": "^2.2.8",
     "epic-spinners": "^1.1.0",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
+    "simple-web-worker": "^1.2.0",
+    "tiny-svg": "^2.2.3",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
@@ -26,6 +30,9 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "bpmn-js": "^8.8.3",
+    "bpmn-js-properties-panel": "^0.37.2",
+    "camunda-bpmn-moddle": "^4.4.1",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
