--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bpmn-js-sketchy": "^0.5.3",
     "bpmn-js-task-resize": "^1.2.0",
     "bpmn-js-token-simulation": "^0.10.0",
-    "element-plus": "^2.2.8",
+    "element-plus": "^2.2.9",
     "epic-spinners": "^1.1.0",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
@@ -30,15 +30,18 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "autoprefixer": "^10.4.7",
     "bpmn-js": "^8.8.3",
     "bpmn-js-properties-panel": "^0.37.2",
     "camunda-bpmn-moddle": "^4.4.1",
-    "@types/node": "^18.0.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.3",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
   }
