--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@smallwei/avue": "^3.0.17",
     "@sscfaith/avue-form-design": "^3.0.0-beta.5",
     "@types/lodash": "^4.14.182",
@@ -19,6 +20,7 @@
     "bpmn-js-token-simulation": "^0.10.0",
     "element-plus": "^2.2.9",
     "epic-spinners": "^1.1.0",
+    "highlight.js": "^11.0.1",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "simple-web-worker": "^1.2.0",
@@ -30,6 +32,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/highlight.js": "^10.1.0",
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
