--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@smallwei/avue": "^3.0.17",
     "@sscfaith/avue-form-design": "^3.0.0-beta.5",
+    "@vitejs/plugin-legacy": "^2.0.0",
     "bowser": "^2.11.0",
     "bpmn-js-sketchy": "^0.5.3",
     "bpmn-js-task-resize": "^1.2.0",
