--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "paths":{
       "@src": ["src"], // 必须如此配置才能在ts中沿用 vite 的 alias 配置
       "@src/*": ["src/*"], // 两个都需要....
+      "@typ": ["types"],
+      "@typ/*": ["types/*"],
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "types/**/*.d.ts" , "src/parts/aq/aq-bpmn-editor/widgets/heighlight-js/lib"],
