--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
       "@typ/*": ["types/*"],
     }
   },
+  "exclude": ["bpmn-js","bpmn-js-token-simulation"],
+  // "exclude": ["splitpanes","bpmn-js/**/*","bpmn-js-token-simulation"],
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "types/**/*.d.ts" , "src/parts/aq/aq-bpmn-editor/widgets/heighlight-js/lib"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
