--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@smallwei/avue": "^3.0.17",
     "@sscfaith/avue-form-design": "^3.0.0-beta.5",
+    "@types/splitpanes": "^2.2.1",
     "@vitejs/plugin-legacy": "^2.0.0",
     "bowser": "^2.11.0",
     "bpmn-js-sketchy": "^0.5.3",
@@ -23,6 +24,7 @@
     "lodash": "^4.17.21",
     "ramda": "^0.28.0",
     "simple-web-worker": "^1.2.0",
+    "splitpanes": "^3.1.1",
     "tiny-svg": "^2.2.3",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
