--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "simple-web-worker": "^1.2.0",
     "splitpanes": "^3.1.1",
     "tiny-svg": "^2.2.3",
+    "uniqid": "^5.4.0",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
@@ -37,6 +38,7 @@
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.0",
     "@types/ramda": "^0.28.15",
+    "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "autoprefixer": "^10.4.7",
