--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "element-plus": "^2.2.9",
     "gsap": "^3.10.4",
     "highlight.js": "^11.0.1",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
+    "mod-onion": "0.0.5",
     "mod-store": "^1.1.0",
     "ramda": "^0.28.0",
     "simple-web-worker": "^1.2.0",
