--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,8 @@
 // 个人如需修改此处配置，请与项目前端管理人员沟通后再进行配置
 
 // 接口地址配置
-VITE_APP_API_BASE_URL = /api/development
-VITE_APP_GEO_BASE_URL = /geo/development
+VITE_APP_API_BASE_URL = http://www.baidu.com
+VITE_APP_GEO_BASE_URL = http://www.baidu.com
 
 // 路由模式配置
 VITE_APP_ROUTER_MODE = hash
