--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ VITE_APP_POWERD = "JN.point.lab"
 VITE_APP_COPY_RIGHT = "COPY RIGHT JN.ltd"
 
 // App主题色
-VITE_APP_THEME = '#123E7A'
+VITE_APP_THEME = '#4c27a4'
