--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@smallwei/avue": "^3.0.17",
     "@sscfaith/avue-form-design": "^3.0.0-beta.5",
+    "@tinymce/tinymce-vue": "^4.0.7",
     "@types/splitpanes": "^2.2.1",
     "bowser": "^2.11.0",
     "bpmn-js-token-simulation": "^0.10.0",
