--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@smallwei/avue": "^3.0.17",
     "@sscfaith/avue-form-design": "^3.0.0-beta.5",
-    "@tinymce/tinymce-vue": "^4.0.7",
     "@types/splitpanes": "^2.2.1",
     "bowser": "^2.11.0",
     "bpmn-js-token-simulation": "^0.10.0",
@@ -29,6 +28,7 @@
     "simple-web-worker": "^1.2.0",
     "splitpanes": "^3.1.1",
     "tiny-svg": "^2.2.3",
+    "tinymce": "^6.1.2",
     "uniqid": "^5.4.0",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.2.25",
@@ -54,6 +54,7 @@
     "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.9",
+    "vite-plugin-static-copy": "^0.8.0",
     "vue-tsc": "^0.34.7"
   }
 }
