--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "gsap": "^3.10.4",
     "highlight.js": "^11.0.1",
     "install": "^0.13.0",
+    "json-stringify-nice": "^1.1.4",
+    "jsonfn": "^0.31.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mod-onion": "0.0.5",
     "mod-store": "^1.1.0",
+    "monaco-editor": "^0.34.0",
     "ramda": "^0.28.0",
     "simple-web-worker": "^1.2.0",
     "splitpanes": "^3.1.1",
